--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta Name="description" Content="John Palmer's GitHub Page.">
+  <meta HTTP-EQUIV="description" Content="John Palmer's GitHub Page.">
+  <meta Name="keywords" Content="John R.B. Palmer, John R. Palmer, John Palmer, Palmer">
+  <meta HTTP-EQUIV="keywords" Content="John R.B. Palmer, John R. Palmer, John Palmer, Palmer"> 
+  <meta Name="author" Content="John R.B. Palmer">
+  <link rel="icon" href="favicon.ico">
+  <title> John Palmer </title>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+ </head>
+
 <body>
 <h1>John Palmer's GitHub Page</h1>
 <p>More coming soon...</p>
