--- a/index.html
+++ b/index.html
@@ -10,12 +10,55 @@
   <meta Name="author" Content="John R.B. Palmer">
   <link rel="icon" href="favicon.ico">
   <title> John Palmer </title>
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+ 
  </head>
 
 <body>
-<h1>John Palmer's GitHub Page</h1>
-<p>More coming soon...</p>
-<p>My personal website is <a href="http://johnrbpalmer.com">here</a>.</p>
+
+<div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">JRBP</h3>
+<!--
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul> 
+-->
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">John Palmer's Github Page</h1>
+            <p class="lead">More coming soon...</p>
+            <p class="lead">
+              <a href="http://johnrbpalmer.com" class="btn btn-lg btn-default">Personal Website</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+ <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 </body>
 </html>
