--- a/index.html
+++ b/index.html
@@ -19,46 +19,16 @@
 
 <body>
 
-<div class="site-wrapper">
+ <div class="container theme-showcase" role="main">
 
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">JRBP</h3>
-<!--
-              <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul> 
--->
-            </div>
-          </div>
-
-          <div class="inner cover">
-            <h1 class="cover-heading">John Palmer's Github Page</h1>
-            <p class="lead">More coming soon...</p>
-            <p class="lead">
-              <a href="http://johnrbpalmer.com" class="btn btn-lg btn-default">Personal Website</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
-        </div>
-
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>John Palmer's Github Page</h1>
+        <p>More coming soon...</p>
+        <p><a href="http://johnrbpalmer.com" class="btn btn-lg btn-default">Personal Website</a></p>
       </div>
 
-    </div>
-
-
+</div>
 
 </body>
 </html>
