--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="jumbotron">
         <h1>John Palmer's Github Page</h1>
         <p>More coming soon...</p>
-        <p><a href="http://johnrbpalmer.com" class="btn btn-lg btn-default"><i class="fa fa-rocket"></i>Personal Website</a></p>
+        <p><a href="http://johnrbpalmer.com" class="btn btn-lg btn-success"><i class="fa fa-flag fa-2x pull-left"></i>Personal Website</a></p>
       </div>
 
 </div>
