--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta HTTP-EQUIV="keywords" Content="John R.B. Palmer, John R. Palmer, John Palmer, Palmer"> 
   <meta Name="author" Content="John R.B. Palmer">
   <title> John Palmer </title>
+  <link rel="icon" href="favicon.ico">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
