--- a/index.html
+++ b/index.html
@@ -12,23 +12,14 @@
   <link rel="icon" href="favicon.ico">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
  </head>
 
-<body>
+<body style="background-color: #2F4F4F;">
 
- <div class="container theme-showcase" role="main">
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>John Palmer's Github Page</h1>
-        <p>More coming soon...</p>
-        <p><a href="http://johnrbpalmer.com" class="btn btn-lg btn-success"><i class="fa fa-flag fa-2x pull-left"></i>Personal Website</a></p>
-      </div>
-
-</div>
+ 
+        
 
 </body>
 </html>
