--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
  </head>
 
-<body style="background-color: #2F4F4F;">
+<body style="background-color: #304A59;">
 
  <img src="images/image.png">
         
