--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
 <body style="background-color: #304A59;">
 
+<div class="container-fluid">
  <img src="images/image.png">
+</div>
         
 
 </body>
