--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 <body style="background-color: #304A59;">
 
 <div class="container-fluid">
- <img src="images/image.png">
+  
+  <div class="row">
+ <img class="img-responsive" src="images/image.png">
+    
+  </div>
+  
 </div>
         
 
