testing first image link

--- a/index.html
+++ b/index.html
@@ -14,19 +14,30 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
- </head>
+</head>
 
 <body style="background-color: #304A59;">
 
-<div class="container-fluid">
-  
-  <div class="row">
- <img class="img-responsive" src="images/image.png">
-    
+  <div class="container-fluid">
+
+    <div class="row">
+      <div class="col-md-8">
+       <img class="img-responsive" src="images/handwriting_jp.png">    
+     </div>
+     <div class="col-md-4">
+     </div>
+   </div>
+
+   <div class="row">
+    <div class="col-md-4">
+           <a href="johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching.png"></a>    
+    </div>
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-4">
+    </div>
   </div>
-  
 </div>
-        
 
 </body>
 </html>
