--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
    </div>
 
    <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-2">
            <a href="johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching.png"></a>    
     </div>
-    <div class="col-md-4">
+    <div class="col-md-2">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
     </div>
   </div>
 </div>
