--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-md-8">
+     <div class="col-md-4">
+     </div>
+      <div class="col-md-4">
        <img class="img-responsive" src="images/handwriting_jp.png">    
      </div>
      <div class="col-md-4">
