another link and better sizes

--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
   <div class="container-fluid">
 
     <div class="row">
-     <div class="col-md-4">
+     <div class="col-md-3">
      </div>
-      <div class="col-md-4">
+      <div class="col-md-6">
        <img class="img-responsive" src="images/handwriting_jp.png">    
      </div>
-     <div class="col-md-4">
+     <div class="col-md-3">
      </div>
    </div>
 
    <div class="row">
     <div class="col-md-2">
-           <a href="johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching.png"></a>    
+           <a href="http://johnrbpalmer.com/research.html"><img class="img-responsive" src="images/handwriting_research_small.png"></a>    
     </div>
     <div class="col-md-2">
+           <a href="johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching_small.png"></a>    
     </div>
     <div class="col-md-2">
     </div>
