--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">&copy; 2016 John R.B. Palmer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">John R.B. Palmer's Website</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://johnrbpalmer.com" property="cc:attributionName" rel="cc:attributionURL">John R.B. Palmer</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+        <p class="text-muted">&copy; 2016 John R.B. Palmer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://johnrbpalmer.com" property="cc:attributionName" rel="cc:attributionURL">John R.B. Palmer</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
       </div>
     </footer>
 </body>
