--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <a href="http://johnrbpalmer.com/research.html"><img class="img-responsive" src="images/handwriting_research_small.png"></a>    
     </div>
     <div class="col-md-2">
-           <a href="johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching_small.png"></a>    
+           <a href="http://johnrbpalmer.com/teaching.html"><img class="img-responsive" src="images/handwriting_teaching_small.png"></a>    
     </div>
     <div class="col-md-2">
     </div>
