--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
      </div>
    </div>
 
+    
+    <div class="row">
+     <div class="col-md-3">
+     </div>
+      <div class="col-md-6">
+       <p style="color:white;">This page is just a testing area for new design ideas that I will eventually put into my regular website, which is <a href="http://johnrbpaplmer.com">here</a></p>
+     </div>
+     <div class="col-md-3">
+     </div>
+   </div>
+    
    <div class="row">
     <div class="col-md-2">
            <a href="http://johnrbpalmer.com/research.html"><img class="img-responsive" src="images/handwriting_research_small.png"></a>    
