--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
      <div class="col-md-3">
      </div>
       <div class="col-md-6">
-       <p style="color:white;">This page is just a testing area for new design ideas that I will eventually put into my regular website, which is at <a style="color:orange; "href="http://johnrbpalmer.com">http://johnrbpalmer.com</a>.</p>
+       <p style="color:white;">This page is a testing area for new design ideas that I will eventually put into my regular website, which is at <a style="color:orange; "href="http://johnrbpalmer.com">http://johnrbpalmer.com</a>.</p>
+        <p>I am also using this domain to post various items for easy access, including:<p>
+        <ul>
+          <li><a href="https://johnpalmer.github.io/PCB2017/">Premis Ciutat de Barcelona: Statement of thanks</a></li>
+          <li><a href="https://johnpalmer.github.io/GSRM2018-Slides">Global Studies Research Methods 2018: Class Materials</a></li>
+          <li><a href="https://johnpalmer.github.io/MICA2018-Slides">Mètodes d'Investigació Criminològica Avançada 2018:Class Materials</a></li>
+          <li><a href="https://johnpalmer.github.io/GSRM2018-Slides">Theories of International Mobility and the Incorporation of Immigrants 2018: Class Materials</a></li>
+        </ul>          
+
+        
      </div>
      <div class="col-md-3">
      </div>
