--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="https://johnpalmer.github.io/PCB2017/">Premis Ciutat de Barcelona: Statement of thanks</a></li>
           <li><a href="https://johnpalmer.github.io/GSRM2018-Slides">Global Studies Research Methods 2018: Class Materials</a></li>
           <li><a href="https://johnpalmer.github.io/MICA2018-Slides">Mètodes d'Investigació Criminològica Avançada 2018:Class Materials</a></li>
-          <li><a href="https://johnpalmer.github.io/GSRM2018-Slides">Theories of International Mobility and the Incorporation of Immigrants 2018: Class Materials</a></li>
+          <li><a href="https://johnpalmer.github.io/TIMII2018-Slides">Theories of International Mobility and the Incorporation of Immigrants 2018: Class Materials</a></li>
         </ul>          
 
         
