--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <div class="col-md-3">
      </div>
       <div class="col-md-6">
-       <p style="color:white;">This page is a testing area for new design ideas that I will eventually put into my regular website, which is at <a style="color:orange; "href="http://johnrbpalmer.com">http://johnrbpalmer.com</a>.</p>
+       <p style="color:white;">This page is mainly a testing area for new design ideas that I will eventually put into my regular website, which is at <a style="color:orange; "href="http://johnrbpalmer.com">http://johnrbpalmer.com</a>.</p>
         <p style="color:white;">I am also using this domain to post various items for easy access, including:<p>
         <ul>
           <li><a href="https://johnpalmer.github.io/PCB2017/">Premis Ciutat de Barcelona: Statement of thanks</a></li>
