--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
        <p style="color:white;">This page is mainly a testing area for new design ideas that I will eventually put into my regular website, which is at <a style="color:orange; "href="http://johnrbpalmer.com">http://johnrbpalmer.com</a>.</p>
         <p style="color:white;">I am also using this domain to post various items for easy access, including:<p>
         <ul>
-          <li><a href="https://johnpalmer.github.io/PCB2017/">Premis Ciutat de Barcelona: Statement of thanks</a></li>
+          <li><a href="https://docs.google.com/presentation/d/e/2PACX-1vT7Jg5acsfLq2UOmVBIvxfAulwm0DCZLYA8L7FA-IwlaK1CgQnvfqXHZV0x8b4Vpiquiui9h6Z6Undl/pub?start=false&loop=false&delayms=3000">Mobility Slides CPIS 2019</a></li>
+          <li><a href="https://docs.google.com/presentation/d/e/2PACX-1vTP75lQZ1p9qyQw1S_9B4SI-7fsGx2RI43WuZCBETE2nKX0zdn_ELdFXH4FTuO8poNZS3rKzfkKb-1l/pub?start=false&loop=false&delayms=3000">Mobility Slides FPE 2019</a></li>
+
+          <!-- 
+<li><a href="https://johnpalmer.github.io/PCB2017/">Premis Ciutat de Barcelona: Statement of thanks</a></li>
           <li><a href="https://johnpalmer.github.io/GSRM2018-Slides">Global Studies Research Methods 2018: Class Materials</a></li>
           <li><a href="https://johnpalmer.github.io/MICA2018-Slides">Mètodes d'Investigació Criminològica Avançada 2018:Class Materials</a></li>
           <li><a href="https://johnpalmer.github.io/TIMII2018-Slides">Theories of International Mobility and the Incorporation of Immigrants 2018: Class Materials</a></li>
-        </ul>          
+-->        
+</ul>          
 
         
      </div>
