--- a/testing/index.html
+++ b/testing/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<iframe src=https://ee.kobotoolbox.org/i/::DhfzMO9H width="100%"></iframe>
+<iframe src=https://ee.kobotoolbox.org/i/::DhfzMO9H width="1000" height="600"></iframe>
 
 </body>
 </html>
