new publications added

--- a/research.html
+++ b/research.html
@@ -43,6 +43,34 @@
  <td>
   <br/>
 
+	 	 	  	   <a href="https://doi.org/10.1016/j.idm.2022.11.001"><em>Modeling the impact of surveillance activities combined with physical distancing interventions on COVID-19 epidemics at a local level</em></a><br/>Guan-Jhou Chen, John R.B. Palmer, Frederic Bartumeus, & Ana Alba Casals, M, Infectious Disease Modelling, https://doi.org/10.1016/j.idm.2022.11.001 (2022).
+
+	 
+	 
+  <br/><br/>
+
+	 	  	   <a href="https://doi.org/10.3390/insects13080675"><em>Integrating Global Citizen Science Platforms to Enable Next-Generation Surveillance of Invasive and Vector Mosquitoes</em></a><br/>Ryan M. Carney, Connor Mapes, Russanne D. Low, Alex Long, Anne Bowser, David Durieux, Karlene Rivera, Berj Dekramanjian, Frederic Bartumeus, Daniel Guerrero, Carrie E. Seltzer, Farhat Azam, Sriram Chellappan, & John R.B. Palmer, Insects 13, 675, https://doi.org/10.3390/insects13080675 (2022).
+
+  <br/><br/>
+
+	 
+	  	   <a href="https://doi.org/10.46471/gigabyte.57"><em>First pan-European harmonized surveillance of Aedes invasive mosquito species of relevance for human vector-borne diseases</em></a><br/>Miguel Ángel Miranda et al., Gigabyte, https://doi.org/10.46471/gigabyte.57 (2022).
+
+  <br/><br/>
+	 
+	 	 	   <a href="https://doi.org/10.46471/gigabyte.54"><em>Mosquito Alert: Leveraging Citizen Science to Create a GBIF Mosquito Occurrence Dataset</em></a><br/>Zivko Juznic Zonta, Isis Sanpera-Calbet, Roger Eritja, John Palmer, Agusti Escobar, Joan Garriga, Aitana Oltra, Alex Richter-Boix, Francis Schaffner, Alessandra della Torre, Miguel Angel Miranda, Marion Koopmans, Luisa Barzon, Frederic Bartumeus Ferre, GigaByte, https://doi.org/10.46471/gigabyte.54 (2022).  
+
+  <br/><br/>
+
+	 
+	 	   <a href="https://digital.csic.es/handle/10261/260548"><em>Cognition, collective behaviors & consciousness</em></a><br/>S. Canals, F. Bartumeus, A. Gomez-Marin, L. Martinez-Otero, C. Marquez, S. Valverde, E. Hernandez-Garcia, C. Lopez, C. Mirasso, D. del Castillo, E. Rocon, F. Criado-Boado, J.R.B. Palmer, N. Castellanos, G. Diex, & F. Maestu, Brain, Mind and Behaviour, Volume 5, pp. 41-57 (E. Herrera E & J.A. Esteban eds.; S. Canals & F. Bartumeus coords.), Consejo Superior de Investigaciones Cientificas, CSIC (2021).
+
+  <br/><br/>
+
+	   <a href="https://digital.csic.es/handle/10261/267284"><em>Healthy planet: hazards, risk, management and solutions-oriented research</em></a><br/>T. Austin, F. Bartumeus, S. Bernal, Ll. Camarero, M. Becerro, E. Cebrian, J. Catalan, A. Ferrer, J. Garrabou, H. Guasch, A. Nogales, J.R.B. Palmer, A. Sorolla, & J. Terrados, Global Change Impacts, Volume 7, pp: 153-172, (M.B. García & P. Jordano eds.; E.O. Casamayor & F. Valladares coords.), Desafíos Científicos del Consejo Superior de Investigaciones Científicas, CSIC (2021).
+
+  <br/><br/>
+
   <a href="https://doi.org/10.1038/s41598-021-83657-4"><em>Deep learning identification for citizen science surveillance of tiger mosquitoes</em></a><br/>Balint Armin Pataki, Joan Garriga, Roger Eritja, John R. B. Palmer, Frederic Bartumeus & Istvan Csabai, Scientific Reports, 11, 4718, https://doi.org/10.1038/s41598-021-83657-4 (2021).
 
   <br/><br/>
