minor change to footer text

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -219,7 +219,7 @@
                 <p class="copyright">Copyright:
                     <span>
                         <script>document.write(new Date().getFullYear())</script>
-                    </span> John R.B. Palmer. Built with <a href="https://gohugo.io/">Hugo</a> using the <a href="https://themes.gohugo.io/timer-hugo/">Timer</a> theme designed and developed by
+                    </span> John R.B. Palmer. This website is built and maintained by John Palmer using <a href="https://gohugo.io/">Hugo</a> and the <a href="https://themes.gohugo.io/timer-hugo/">Timer</a> theme designed and developed by
                     <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
                 </p>
             </div>
