--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="0ms">
 
                     <div class="team-img"><a href="https://h-mip.com">
-                        <img height="150" src="https://johnrbpalmer.com/images/projects/hmip.jpeg" class="team-pic" alt="team-member"></a>
+                        <img height="150" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/hmip.jpeg" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://h-mip.com">
                     <h3 class="team_name">Human-Mosquito Interaction Project</h3></a>
@@ -315,7 +315,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
 
                     <div class="team-img"><a href="http://idalertproject.eu">
-                        <img height="150" src="https://johnrbpalmer.com/images/projects/idalert.png" class="team-pic" alt="team-member"></a>
+                        <img height="150" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/idalert.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="http://idalertproject.eu">
                     <h3 class="team_name">IDAlert</h3></a>
@@ -335,7 +335,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="600ms">
 
                     <div class="team-img"><a href="http://www.mosquitoalert.com/en/scientific-projects/big-mosquito-bytes/">
-                        <img height="150" src="https://johnrbpalmer.com/images/projects/bmb.png" class="team-pic" alt="team-member"></a>
+                        <img height="150" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/bmb.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="http://www.mosquitoalert.com/en/scientific-projects/big-mosquito-bytes/">
                     <h3 class="team_name">Big Mosquito Bytes</h3></a>
@@ -355,7 +355,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="900ms">
 
                     <div class="team-img"><a href="https://www.veo-europe.eu">
-                        <img height="150" src="https://johnrbpalmer.com/images/projects/veo.png" class="team-pic" alt="team-member"></a>
+                        <img height="150" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/veo.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://www.veo-europe.eu">
                     <h3 class="team_name">VEO</h3></a>
