--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <section id="publications" class="works">
     <div class="container">
         <div class="section-heading">
-            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Latest Publications</h1>
+            <h1 class="title wow fadeInDown" data-wow-delay=".3s">Recent Publications</h1>
             <p class="wow fadeInDown" data-wow-delay=".5s">Complete list of publications at <a href="https://orcid.org/0000-0002-2648-7860">Orcid</a></p>
         </div>
         <div class="row">
