sci reps published link

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <img src="/images/portfolio/lucati-et-al-2022.png" class="img-fluid" alt="this is a title">
                         <div class="overlay">
                             <div class="buttons">
-                                <a href="https://doi.org/10.1101/2022.07.11.499514">Read</a>
+                                <a href="https://doi.org/10.1038/s41598-022-24963-3">Read</a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                       
                         </h6>
                         <p>
-                            Scientific Reports (forthcoming)
+                            Scientific Reports
                         </p>
                     </figcaption>
                 </figure>
