improvied performance with smaller banner image and webp format

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 
 <!-- Slider Section Start -->
 <section id="hero-area" style='background-image: url("https://johnrbpalmer.com/images/main.jpg");'>
+        
+        <img class="lozad" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url(https:\/\/johnrbpalmer.com\/images\/main.jpg)'" data-src="https://johnrbpalmer.com/images/main.webp" />
+
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
