--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-sm-6">
                 <div class="block wow fadeInLeft" data-wow-delay=".3s" data-wow-duration="500ms">
                     <h2>About</h2>
-                    <p>I am an associate professor in the Department of Political and Social Sciences at Universitat Pompeu Fabra, where I am a member of the Sociodemography Research Group. My research explores human mobility, inequality, and health from the perspectives of multiple disciplines, including sociodemography, ecology, and law.</p>
+                    <p>I am an associate professor in the Department of Political and Social Sciences at Universitat Pompeu Fabra, where I am a member of the Sociodemography Research Group and the Interdisciplinary Research Group on Immigration. My research explores human mobility, inequality, and health from the perspectives of multiple disciplines, including sociodemography, ecology, and law.</p>
                     <p>
                         <a rel="me" href="https://mastodon.social/@johnrbpalmer"><img src="images/icons/noun-mammoth-3220.png" height=32px></a> &nbsp; <a href="https://orcid.org/0000-0002-2648-7860"><img src="images/icons/orcid_icon.png" height=32px></a></p>
                 </div>
