--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en-us"><head>
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,31 +12,31 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>John Palmer</title>
-  <link rel="icon" href="http://localhost:1313/images/favicon.ico">
+  <link rel="icon" href="https://johnrbpalmer.com/images/favicon.ico">
 
   <!-- Twitter Bootstrs CSS -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/bootstrap/bootstrap.min.css">
   <!-- Ionicons Fonts Css -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/ionicons/ionicons.min.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/ionicons/ionicons.min.css">
   <!-- animate css -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/animate-css/animate.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/animate-css/animate.css">
   <!-- Hero area slider css-->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/slider/slider.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/slider/slider.css">
   <!-- slick slider -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/slick/slick.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/slick/slick.css">
   <!-- Fancybox -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/facncybox/jquery.fancybox.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/facncybox/jquery.fancybox.css">
   <!-- hover -->
-  <link rel="stylesheet" href="http://localhost:1313/plugins/hover/hover-min.css">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/plugins/hover/hover-min.css">
   <!-- template main css file -->
   
-  <link rel="stylesheet" href="http://localhost:1313/css/style.min.css" integrity="" media="screen">
+  <link rel="stylesheet" href="https://johnrbpalmer.com/css/style.min.css" integrity="" media="screen">
 </head><body><section class="top-bar animated-header">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<a class="navbar-brand" href="http://localhost:1313/">
+					<a class="navbar-brand" href="https://johnrbpalmer.com/">
 						John Palmer
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -47,7 +47,7 @@
 					<div class="collapse navbar-collapse" id="navigation">
 						<ul class="navbar-nav ml-auto">
 							<li class="nav-item">
-								<a class="nav-link" href="http://localhost:1313/">Home</a>
+								<a class="nav-link" href="https://johnrbpalmer.com/">Home</a>
 							</li>
 							
 							<li class="nav-item">
@@ -83,9 +83,9 @@
 
 
 <!-- Slider Section Start -->
-<section id="hero-area" style='background-image: url("http://localhost:1313/images/main.jpg");'>
+<section id="hero-area" style='background-image: url("https://johnrbpalmer.com/images/main.jpg");'>
         
-        <img class="lozad" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url(http:\/\/localhost:1313\/images\/main.jpg)'" data-src="http://localhost:1313/images/main.webp" />
+        <img class="lozad" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url(https:\/\/johnrbpalmer.com\/images\/main.jpg)'" data-src="https://johnrbpalmer.com/images/main.webp" />
 
     <div class="container">
         <div class="row">
@@ -154,7 +154,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img src="http://localhost:1313/images/about/about.jpg" alt="about-image">
+                    <img src="https://johnrbpalmer.com/images/about/about.jpg" alt="about-image">
                 </div>
             </div>
         </div>
@@ -774,7 +774,7 @@
 
             <div class="col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <img style="max-width:400px" src="http://localhost:1313/images/teaching/teaching.png" alt="about-image">
+                    <img style="max-width:400px" src="https://johnrbpalmer.com/images/teaching/teaching.png" alt="about-image">
                 </div>
             </div>
 
@@ -806,7 +806,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="0ms">
 
                     <div class="team-img"><a href="https://h-mip.com">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/hmip.jpeg" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/hmip.jpeg" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://h-mip.com">
                     <h3 class="team_name">Human-Mosquito Interaction Project</h3></a>
@@ -826,7 +826,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="300ms">
 
                     <div class="team-img"><a href="https://planet4health.eu">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/planet4health.png" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/planet4health.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://planet4health.eu">
                     <h3 class="team_name">Planet4Health</h3></a>
@@ -846,7 +846,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="600ms">
 
                     <div class="team-img"><a href="https://www.e4warning.eu">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/e4warning.jpg" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/e4warning.jpg" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://www.e4warning.eu">
                     <h3 class="team_name">E4Warning</h3></a>
@@ -866,7 +866,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="900ms">
 
                     <div class="team-img"><a href="http://idalertproject.eu">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/idalert.png" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/idalert.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="http://idalertproject.eu">
                     <h3 class="team_name">IDAlert</h3></a>
@@ -886,7 +886,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="1200ms">
 
                     <div class="team-img"><a href="https://sites.google.com/view/algorithmlaw/home">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/algorithmlaw.jpeg" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/algorithmlaw.jpeg" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://sites.google.com/view/algorithmlaw/home">
                     <h3 class="team_name">AlgorithmLaw</h3></a>
@@ -906,7 +906,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="1500ms">
 
                     <div class="team-img"><a href="https://sites.google.com/view/iconsumers/home">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/iconsumers.jpg" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/iconsumers.jpg" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://sites.google.com/view/iconsumers/home">
                     <h3 class="team_name">iConsumers</h3></a>
@@ -926,7 +926,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="1800ms">
 
                     <div class="team-img"><a href="http://www.mosquitoalert.com/en/scientific-projects/big-mosquito-bytes/">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/bmb.png" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/bmb.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="http://www.mosquitoalert.com/en/scientific-projects/big-mosquito-bytes/">
                     <h3 class="team_name">Big Mosquito Bytes</h3></a>
@@ -946,7 +946,7 @@
                 <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay="2100ms">
 
                     <div class="team-img"><a href="https://www.veo-europe.eu">
-                        <img height="200" style="max-width:200px;" src="http://localhost:1313/images/projects/veo.png" class="team-pic" alt="team-member"></a>
+                        <img height="200" style="max-width:200px;" src="https://johnrbpalmer.com/images/projects/veo.png" class="team-pic" alt="team-member"></a>
                     </div>
                     <a href="https://www.veo-europe.eu">
                     <h3 class="team_name">VEO</h3></a>
@@ -986,7 +986,7 @@
 
             <div class="col-sm-6">
                 <div class="block wow fadeInRight" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <a href="http://www.mosquitoalert.com"><img style="max-width:400px" src="http://localhost:1313/images/projects/malert.png" alt="about-image"></a>
+                    <a href="http://www.mosquitoalert.com"><img style="max-width:400px" src="https://johnrbpalmer.com/images/projects/malert.png" alt="about-image"></a>
                 </div>
             </div>
 
@@ -1042,23 +1042,23 @@
 <!-- footer section end -->
 
 <!-- jquery -->
-<script src="http://localhost:1313/plugins/jQurey/jquery.min.js"></script>
+<script src="https://johnrbpalmer.com/plugins/jQurey/jquery.min.js"></script>
 <!-- Form Validation -->
-<script src="http://localhost:1313/plugins/form-validation/jquery.form.js"></script>
-<script src="http://localhost:1313/plugins/form-validation/jquery.validate.min.js"></script>
+<script src="https://johnrbpalmer.com/plugins/form-validation/jquery.form.js"></script>
+<script src="https://johnrbpalmer.com/plugins/form-validation/jquery.validate.min.js"></script>
 <!-- slick slider -->
-<script src="http://localhost:1313/plugins/slick/slick.min.js"></script>
+<script src="https://johnrbpalmer.com/plugins/slick/slick.min.js"></script>
 <!-- bootstrap js -->
-<script src="http://localhost:1313/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://johnrbpalmer.com/plugins/bootstrap/bootstrap.min.js"></script>
 <!-- wow js -->
-<script src="http://localhost:1313/plugins/wow-js/wow.min.js"></script>
+<script src="https://johnrbpalmer.com/plugins/wow-js/wow.min.js"></script>
 <!-- slider js -->
-<script src="http://localhost:1313/plugins/slider/slider.js"></script>
+<script src="https://johnrbpalmer.com/plugins/slider/slider.js"></script>
 <!-- Fancybox -->
-<script src="http://localhost:1313/plugins/facncybox/jquery.fancybox.js"></script>
+<script src="https://johnrbpalmer.com/plugins/facncybox/jquery.fancybox.js"></script>
 <!-- template main js -->
 
-<script src="http://localhost:1313/js/script.min.js"></script>
+<script src="https://johnrbpalmer.com/js/script.min.js"></script>
 <!-- google analitycs -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
